# src/dtos/index.ts
@@ -1,2 +1,4 @@
 export * from './race/race_dto';
 export * from './race/race_year_grand_prix_request_dto';
+export * from './race_result/driver_race_result';
+export * from './race_result/race_result';
