# src/dtos/race_result/race_result.ts
@@ -1,0 +1,9 @@
+export interface RaceResultDto {
+  car: string;
+  pos: number;
+  grandPrix: string;
+  raceDate: Date;
+  pts: number;
+  laps: number;
+  time: string;
+}
